# yoshimidi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml
configs/: train.toml
notebooks/: data_transforms.ipynb  inference.ipynb  loss.ipynb  time_distribution.ipynb  transformer.ipynb
scripts/: parse_midi_files.py  tokenize.py
tests/clis/: test_tokenize.py
tests/data/parse/: test_midi_parsing.py  test_time_parsing.py  test_track_parsing.py
tests/data/tokenize/: test_main.py
tests/scripts/: test_tokenize.py
yoshimidi/: inference.py  output_config.py  player.py
yoshimidi/clis/: parse_midi_files.py  tokenize_midi_dataset.py  train.py  vastai.py
yoshimidi/data/: __main__.py  midi_dataset.py  midi_parser.py  token_format.py  token_parsing.py  track.py  track_parsing.py  tracks.py  utils.py
yoshimidi/data/parse/: __main__.py  midi_parsing.py  one_hot_parsing.py  time_parsing.py  token_parsing.py  track_parsing.py  tracks.py
yoshimidi/data/tokenize/: __main__.py
yoshimidi/synth/: __main__.py
yoshimidi/train/: __main__.py  checkpoints.py  determinism.py  evals.py  flops.py  midi_activation.py  midi_loss.py  step_schedule.py  timer.py  training_config.py  transformer.py  transformer_config.py
yoshimidi/train/model/: gpt.py  gpt2.py  mlp.py  multi_head_attention.py  positional_encoding.py  transformer.py  transformer_config.py
